# django-docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
composeexample/: settings.py
