[tool.poetry]
name = "dpd"
version = "0.1.0"
description = "The dpd project"
authors = ["dev <dev@dpd.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
